# ChangeLog for sys-apps/dbus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.239 2009/08/08 20:45:16 flameeyes Exp $

  08 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org> dbus-1.3.0.ebuild,
  +files/dbus-1.3.0-no-cloexec.patch:
  Add patch from upstream to fix check for cloexec (bug #280299). No
  revbump, but it didn't use cloexec there before.

  08 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org> dbus-1.3.0.ebuild:
  Remove ~x86-fbsd keyword as per bug #280299 for now.

  05 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> dbus-1.3.0.ebuild,
  +files/dbus-1.3.0-asneeded.patch:
  Fix test suite building with -Wl,--as-needed (undefined reference to
  clock_gettime) wrt #280170.

*dbus-1.3.0 (03 Aug 2009)

  03 Aug 2009; <steev@gentoo.org> +dbus-1.3.0.ebuild:
  Add dbus 1.3.0.

  26 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/dbus-1.0.1-fixfilecreation.patch, -dbus-1.0.2-r2.ebuild,
  -dbus-1.1.4.ebuild, -files/dbus-1.1.4-xdisplay_null.patch,
  -dbus-1.1.20.ebuild, -files/dbus-1.1.20-fix-build.patch,
  -dbus-1.2.1.ebuild, -dbus-1.2.3.ebuild:
  Clean up old revisions, notably for security issues, bug #271769.

  23 Apr 2009; Nirbheek Chauhan <nirbheek@gentoo.org> dbus-1.2.12:
  Fix bug 267125 (murphy's law causes a two-character change before cvs
  commit to cause build-failure)

  23 Apr 2009; Nirbheek Chauhan <nirbheek@gentoo.org> dbus-1.2.12:
  Fix bug 267111 (check if xorg-server is installed before checking for hal
  USE flag on it)

*dbus-1.2.12 (21 Apr 2009)

  21 Apr 2009; Nirbheek Chauhan <nirbheek@gentoo.org> +dbus-1.2.12.ebuild:
  Add dbus-1.2.12, reviewed by steev

  05 Feb 2009; Alexis Ballier <aballier@gentoo.org>
  +files/dbus-1.2.3-bsd.patch, dbus-1.2.3-r1.ebuild:
  Backport an upstream patch to fix runtime error on FreeBSD, bug #236779
  and rekeyword it for x86-fbsd

  15 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml: