@@ -9,6 +9,7 @@ AUX dbus.init-1.0 1152 RMD160 f0f409b59167beef2e2b8c14f701fbeaa54c3bc9 SHA1 b00e
 DIST dbus-1.2.12.tar.gz 1574756 RMD160 779d76320f1343dae7447c82a683e372e6c11729 SHA1 13de8dc28c9edae7b9d2928ff691549bb2bef21a SHA256 b2ec81e7d9fa5e24f67baccfd9af2755a7797a65cb4c3cad10d023867f2bd220
 DIST dbus-1.3.0.tar.gz 1517408 RMD160 ed823727c11a437e9a0d548b9c3d92a8fd4d386b SHA1 ebd23c65ebf5448efc6367da1414de212db38055 SHA256 fe32b49667894cf91b0a97503163be5c4814ecf67259e8feb26d1ba57cb03dae
 EBUILD dbus-1.2.12.ebuild 4715 RMD160 ac40e868ae37c157eb3b1172f4c44ee435f85c1a SHA1 9b2d7ae85f36bf3502c638a9c5ce218a5ae5dfb8 SHA256 cec0e52fcfaf7c56a1d10dbe2e4e73b06a27f0ceb05e4e4c0892ba43ff9fc37a
+EBUILD dbus-1.3.0-r1.ebuild 5531 RMD160 2a252f08991f80504e230e1091dcf6d9c949d8bf SHA1 10bdd1eb7a4799ce705954481c1d4b0aab51c587 SHA256 7645e64bebacd3f4dd80153d4ec259a771140a7b45f417f765266576d3112c52
 EBUILD dbus-1.3.0.ebuild 4901 RMD160 acba5f435991104a5e85ad71a3fa2ceea67c8ca8 SHA1 b57b5717ce9e4ce1de158340fea3b295356b9f86 SHA256 64ec185d49415c9feaf4ad3bf963d8db09b18fe924a8ca67c87e47e64aa3e6fe
-MISC ChangeLog 36035 RMD160 ca37f4ce7969ef2caaea0023dafae63110e54de2 SHA1 1b9726573d2c66d6fb60215394af95a3882efb95 SHA256 5b06acb7d3b63055c1d38ee874b2c6654553bd07db9253df6ae5bb99742f92ab
+MISC ChangeLog 36457 RMD160 2c621f4a584b68af707f4ee3732edae234ff3bfc SHA1 e333e0c49196c3b3d9cec1d59f9a7170b15e1450 SHA256 fd7e5255e574d58a76a1a5e64371763470d6442a87862c5c035a289440dee241
 MISC metadata.xml 285 RMD160 a557848c4782030e9eeb3dc1f06d98840ad7f73a SHA1 e0ba318a0e1a819cc360ea98cc3477dcf52a1526 SHA256 f0df8a3ebe8d22c87645cf66ed8c50c4e64ded6ad1e279e9912cb5074feb5a82
