@@ -1,6 +1,16 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.239 2009/08/08 20:45:16 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.240 2009/11/01 22:47:10 eva Exp $
+
+*dbus-1.3.0-r1 (01 Nov 2009)
+
+  01 Nov 2009; Gilles Dartiguelongue <eva@gentoo.org> +dbus-1.3.0-r1.ebuild:
+  Version bump.
+    * Do not install unsafe, test dedicated dbus, bug #287722.
+    * Generate dbus UUID at postinst, bug #258516.
+    * Generate and install doxygen doc, bug #194077.
+    * Drop -rdynamic, dbus handles it by itself with USE=debug, bug #267090.
+    * Do not die because of unsupported CFLAG, bug #274456.
 
   08 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org> dbus-1.3.0.ebuild,
   +files/dbus-1.3.0-no-cloexec.patch:
